# comp9414-tutorials

./: .gitignore
week-0-python-exercises/: README.md
week-0-python-exercises/src/: main.py
week-0-python-exercises/tests/: test_main.py
week-1-search-algorithms/: README.md  main.py  pyproject.toml  solution.ipynb  student.ipynb  visualiser.py
week-2-machine-learning/: README.md
